--- a/text/4-technologies.tex
+++ b/text/4-technologies.tex
@@ -27,10 +27,12 @@ under GNU General Public License (\zk{GPL}).
 \zk{GRASS} \zk{GIS} has grown to a~cross-platform free and open-source \zk{GIS} 
 maintained by an international team of developers and users and licensed under 
 the GNU \zk{GPL} license allowing users to perform geospatial data management 
-and analysis for both raster and vector data, image processing, geocoding and 
+and analysis for both raster and vector data, image processing, geocoding and
+%% ML: v soucasnosti pres 400
 visualization. Within its more than 300 modules, it supports also 
 spatio-temporal data.
 
+%% ML: original -> official ?
 For more information about \zk{GRASS} \zk{GIS}, please see its original 
 website\footnote{\url{https://grass.osgeo.org/documentation/general-overview/}}.
 
@@ -50,7 +52,11 @@ van~Rossum in the~year 1991. Due to its user-friendly and readable structure, it
 more and more popular.
 
 It is very popular also in the~field of open-source \zk{GIS}. Many modules for 
-\zk{GRASS} \zk{GIS} are written in Python and Python is the~most used language 
+\zk{GRASS} \zk{GIS} are written in Python and Python is the~most used language
+%% ML: QGIS plugins ML: nejen, GDAL na Python API, Fiona, RasterIO ML:
+%% skoro bych to prepsal v tom smyslu, ze vetsina opensource GIS
+%% projektu Python podporuje, a nejen open source, napr. pro ESRI je
+%% to hlavni skriptovaci platforma na desktopu
 in QGIS\footnote{\url{https://qgis.org/}}.
 
 For information about programming in Python, please see \cite{diveintopython}.
@@ -67,7 +73,7 @@ For information about programming in Python, please see \cite{diveintopython}.
 
 TensorFlow is an open-source software library developed by Google Brain 
 Team\footnote{\url{https://research.google.com/teams/brain/}} primarily for
-the~purpose of neural network research. TesorFlow uses data flow graphs, where
+the~purpose of neural network research. TensorFlow uses data flow graphs, where
 a~node represents a~mathematical operation and an edge represents a~tensor
 (a~multidimensional array). A~toolkit for visualization of these graphs is called 
 TensorBoard.
@@ -78,6 +84,7 @@ neural networks, the~main focus was dedicated to this field and TensorFlow
 provides a~lot of functions useful for deep learning.
 
 A good starting point is the~book Getting Started with TensorFlow \cite{tf}.
+%% ML: official
 A~documentation and examples can be found also at the~original 
 website\footnote{\url{https://www.tensorflow.org/}}.
 
